NEXT-1007 - Rule condition css fixes

--- a/Resources/administration/src/app/component/form/sw-datepicker/sw-datepicker.html.twig
+++ b/Resources/administration/src/app/component/form/sw-datepicker/sw-datepicker.html.twig
@@ -1,5 +1,5 @@
 {% block sw_datepicker %}
     <div class="sw-datepicker">
-        <input type="text" @input="onInput" ref="flatpickrInput">
+        <input type="text" @input="onInput" ref="flatpickrInput" :placeholder="currentFlatpickrConfig.dateFormat">
     </div>
 {% endblock %}
