--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-and-container/sw-condition-and-container.less
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-and-container/sw-condition-and-container.less
@@ -22,6 +22,7 @@
         padding: 10px 0;
         margin-left: 0;
         font-weight: bold;
+        text-transform: uppercase;
     }
 
     .sw-condition-and-container__actions {
@@ -43,6 +44,11 @@
 
         .sw-condition-and-container__actions--and {
             margin-right: 10px;
+            text-transform: uppercase;
+        }
+
+        .sw-condition-and-container__actions--sub {
+            text-transform: uppercase;
         }
 
         .sw-condition-and-container__actions--delete {
