--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-date-range/sw-condition-date-range.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-date-range/sw-condition-date-range.html.twig
@@ -3,7 +3,7 @@
         <sw-field type="switch"
                   name="useTime"
                   :label="$tc('global.sw-condition.condition.dateRangeRule.useTime')"
-                  v-model="condition.value.useTime"
+                  v-model="useTime"
                   class="field field--switch has--arrow">
         </sw-field>
         <sw-field :type="condition.value.useTime ? 'datetime' : 'date'"
