--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-item-with-quantity/sw-condition-line-item-with-quantity.less
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-item-with-quantity/sw-condition-line-item-with-quantity.less
@@ -1,13 +1,14 @@
 .sw-condition-line-item-with-quantity {
-  .sw-condition-line-item-with-quantity__id-select {
-    height: auto;
-    padding: 0;
-    flex-grow: 1;
+    .sw-condition-line-item-with-quantity__id-select {
+        height: auto;
+        padding: 0;
+        flex-grow: 1;
+        min-width: 50%;
 
-    .sw-select__inner {
-      border: none;
-      padding: 4px 45px 0 13px;
-      min-height: 42px;
+        .sw-select__inner {
+            border: none;
+            padding: 4px 45px 0 13px;
+            min-height: 38px;
+        }
     }
-  }
 }
