--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-or-container/sw-condition-or-container.less
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-or-container/sw-condition-or-container.less
@@ -26,13 +26,14 @@
         display: inline-block;
         position: relative;
         width: calc(100% - 32px);
+        text-transform: uppercase;
 
         &:after {
             content: "";
             position: absolute;
             border-top: 1px dashed @sw-condition-or-container-border;
             top: 50%;
-            width: 100%;
+            width: calc(100% - 15px);
             margin-left: 15px;
         }
     }
@@ -40,36 +41,28 @@
     .sw-condition-or-container__actions {
         margin-top: 20px;
 
-        .sw-condition-or-container__actions--or {
+        .sw-button {
             height: 32px;
             border: 1px solid @sw-condition-or-container-button-border;
             border-radius: 4px;
             padding: auto;
+        }
 
-            .sw-button__content {
-                color: @sw-condition-or-container-button;
-                font-size: 12px;
-                font-weight: 600;
-                line-height: 19px;
-                text-align: center;
-            }
+        .sw-button__content {
+            color: @sw-condition-or-container-button;
+            font-size: 12px;
+            font-weight: 600;
+            line-height: 19px;
+            text-align: center;
+        }
 
+        .sw-condition-or-container__actions--or {
+            margin-right: 10px;
+            text-transform: uppercase;
         }
 
         .sw-condition-or-container__actions--sub {
-            height: 32px;
-            border: 1px solid @sw-condition-or-container-button-border;
-            border-radius: 4px;
-            padding: auto;
-
-            .sw-button__content {
-                color: @sw-condition-or-container-button;
-                font-size: 12px;
-                font-weight: 600;
-                line-height: 19px;
-                text-align: center;
-            }
-
+            text-transform: uppercase;
         }
 
         .sw-condition-or-container__actions--delete {
