--- a/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-set-list/sw-settings-snippet-set-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-set-list/sw-settings-snippet-set-list.html.twig
@@ -27,14 +27,14 @@
             <sw-card-view slot="content">
                 {% block sw_settings_snippet_set_list_card_title %}
                     <sw-card>
-                        <h3>{{ $tc('sw-settings-snippet.list.title') }}</h3>
-                        <p>{{ $tc('sw-settings-snippet.list.description') }}</p>
+                        <h3>{{ $tc('sw-settings-snippet.setList.title') }}</h3>
+                        <p>{{ $tc('sw-settings-snippet.setList.description') }}</p>
                     </sw-card>
                 {% endblock %}
 
                 {% block sw_settings_snippet_set_list_card_list %}
                     <sw-card :isLoading="isLoading"
-                             :title="$tc('sw-settings-snippet.list.cardTitle')">
+                             :title="$tc('sw-settings-snippet.setList.cardTitle')">
                         {% block sw_settings_snippet_set_list_card_list_container %}
                             <sw-container columns="1fr">
                                 <sw-card-section divider="bottom">
@@ -42,19 +42,22 @@
                                         <div class="sw-settings-snippet-set-list__actions">
                                             {% block sw_settings_snippet_set_list_card_list_container_header_btn_export %}
                                                 <sw-button size="small" variant="ghost" disabled>
-                                                    {{ $tc('sw-settings-snippet.list.buttonExport') }}
+                                                    {{ $tc('sw-settings-snippet.setList.buttonExport') }}
                                                 </sw-button>
                                             {% endblock %}
 
                                             {% block sw_settings_snippet_set_list_card_list_container_header_btn_edit_set %}
-                                                <sw-button size="small" variant="primary" disabled>
-                                                    {{ $tc('sw-settings-snippet.list.buttonEditSet') }}
+                                                <sw-button size="small"
+                                                           variant="primary"
+                                                           :disabled="!snippetsEditiable"
+                                                           @click="onEditSnippetSets">
+                                                    {{ $tc('sw-settings-snippet.setList.buttonEditSet') }}
                                                 </sw-button>
                                             {% endblock %}
 
                                             {% block sw_settings_snippet_set_list_card_list_container_header_btn_add_set %}
                                                 <sw-button class="sw-settings-snippet-set-list__action-add" size="small" @click="onAddSnippetSet" variant="ghost">
-                                                    {{ $tc('sw-settings-snippet.list.buttonAddSet') }}
+                                                    {{ $tc('sw-settings-snippet.setList.buttonAddSet') }}
                                                 </sw-button>
                                             {% endblock %}
                                         </div>
@@ -71,6 +74,8 @@
                                      :sortBy="sortBy"
                                      @inline-edit-finish="onInlineEditSave"
                                      @inline-edit-cancel="onInlineEditCancel"
+                                     @sw-grid-select-item="onSelectionChanged"
+                                     @sw-grid-select-all="onSelectionChanged"
                                      @sort-column="onSortColumn"
                                      table>
                                 {% block sw_settings_snippet_set_list_card_list_grid_template %}
@@ -78,7 +83,7 @@
                                         {% block sw_settings_snippet_set_list_card_list_grid_column_name %}
                                             <sw-grid-column flex="1fr"
                                                             class="sw-settings-snippet-set__column-name"
-                                                            :label="$tc('sw-settings-snippet.list.columnName')"
+                                                            :label="$tc('sw-settings-snippet.setList.columnName')"
                                                             dataIndex="name"
                                                             editable
                                                             sortable>
@@ -96,7 +101,8 @@
                                         {% block sw_settings_snippet_set_list_card_list_grid_column_changed %}
                                             <sw-grid-column flex="1fr"
                                                             class="sw-settings-snippet-set-file__column-changed-at"
-                                                            :label="$tc('sw-settings-snippet.list.columnChangedAt')"
+                                                            sortable
+                                                            :label="$tc('sw-settings-snippet.setList.columnChangedAt')"
                                                             dataIndex="baseFile"
                                                             sortable>
                                                 {% block sw_settings_snippet_set_list_card_list_grid_column_changed_date %}
@@ -109,7 +115,8 @@
                                         {% block sw_settings_snippet_set_list_card_list_grid_column_base_file %}
                                             <sw-grid-column flex="1fr"
                                                             class="sw-settings-snippet-set-file__column-base-file"
-                                                            :label="$tc('sw-settings-snippet.list.columnBaseFile')"
+                                                            sortable
+                                                            :label="$tc('sw-settings-snippet.setList.columnBaseFile')"
                                                             dataIndex="baseFile"
                                                             sortable>
                                                 {{ item.baseFile }}
@@ -122,21 +129,21 @@
                                                     <sw-context-button>
                                                         {% block sw_settings_snippet_set_list_card_list_grid_column_base_action_btn_edit %}
                                                             <sw-context-menu-item
-                                                                    :routerLink="{ name: 'sw.settings.snippet.index', params:{ id:item.id } }">
-                                                                {{ $tc('sw-settings-snippet.list.contextMenuEdit') }}
+                                                                    :routerLink="{ name: 'sw.settings.snippet.list', params:{ id: item.id } }">
+                                                                {{ $tc('sw-settings-snippet.setList.contextMenuEdit') }}
                                                             </sw-context-menu-item>
                                                         {% endblock %}
 
                                                         {% block sw_settings_snippet_set_list_card_list_grid_column_base_action_btn_clone %}
                                                         <sw-context-menu-item @click="onClone(item.id)">
-                                                                {{ $tc('sw-settings-snippet.list.contextMenuClone') }}
+                                                                {{ $tc('sw-settings-snippet.setList.contextMenuClone') }}
                                                             </sw-context-menu-item>
                                                         {% endblock %}
 
                                                         {% block sw_settings_snippet_set_list_card_list_grid_column_base_action_btn_delete %}
                                                             <sw-context-menu-item variant="danger"
                                                                                   @click="onDeleteSet(item.id)">
-                                                                {{ $tc('sw-settings-snippet.list.contextMenuDelete') }}
+                                                                {{ $tc('sw-settings-snippet.setList.contextMenuDelete') }}
                                                             </sw-context-menu-item>
                                                         {% endblock %}
                                                     </sw-context-button>
@@ -147,11 +154,11 @@
                                         {% block sw_settings_snippet_set_list_columns_delete_modal %}
                                             <sw-modal v-if="showDeleteModal === item.id"
                                                       @closeModal="onCloseDeleteModal"
-                                                      :title="$tc('sw-settings-snippet.list.modalTitleDelete')"
+                                                      :title="$tc('sw-settings-snippet.setList.modalTitleDelete')"
                                                       variant="small">
                                                 {% block sw_settings_snippet_set_list_delete_modal_confirm_delete_text %}
                                                     <p class="sw-settings-snippet-set-list__confirm-delete-text">
-                                                        {{ $tc('sw-settings-snippet.list.textDeleteConfirm', 0, { name: item.name }) }}
+                                                        {{ $tc('sw-settings-snippet.setList.textDeleteConfirm', 0, { name: item.name }) }}
                                                     </p>
                                                 {% endblock %}
 
@@ -160,7 +167,7 @@
                                                         {% block sw_settings_snippet_set_list_delete_modal_cancel %}
                                                             <sw-button @click="onCloseDeleteModal"
                                                                        size="small">
-                                                                {{ $tc('sw-settings-snippet.list.buttonCancel') }}
+                                                                {{ $tc('sw-settings-snippet.setList.buttonCancel') }}
                                                             </sw-button>
                                                         {% endblock %}
 
@@ -168,7 +175,7 @@
                                                             <sw-button @click="onConfirmDelete(item.id)"
                                                                        variant="primary"
                                                                        size="small">
-                                                                {{ $tc('sw-settings-snippet.list.buttonDelete') }}
+                                                                {{ $tc('sw-settings-snippet.setList.buttonDelete') }}
                                                             </sw-button>
                                                         {% endblock %}
                                                     </template>
