--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-or-container/sw-condition-or-container.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-or-container/sw-condition-or-container.html.twig
@@ -3,7 +3,7 @@
         {% block sw_condition_container_content %}
             <div class="sw-condition-or-container__condition-content">
                 {% block sw_condition_container_children %}
-                    <div v-for="(child, index) in condition.children"
+                    <div v-for="(child, index) in sortedChildren"
                          :key="index">
                         {% block sw_condition_container_children_spacer %}
                             <div v-if="index"
